<resources>
    <!-- Main Strings -->
    <string name="app_name">Tu Pokédex</string>
    <string name="captured_pokemon">Pokémon capturados</string>
    <string name="pokedex">Pokédex</string>
    <string name="settings">Ajustes</string>

    <!-- Login Strings -->
    <string name="login_image_content">Logo de la aplicación</string>
    <string name="hint_username">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_register_email_password">Registrarse con correo electrónico y contraseña</string>
    <string name="btn_register_google">Inicio de sesión o registro con Google"</string>
    <string name="sign_in_cancelled">Inicio de sesión cancelado</string>
    <string name="no_internet_connection">Conexión a internet no disponible</string>
    <string name="unknown_error">Ha ocurrido un error desconocido</string>
    <string name="empty_fields">El usuario y/o la contraseña están vacíos</string>
    <string name="sign_in_failed">Fallo al iniciar sesión</string>
    <string name="invalid_email">Correo no válido</string>
    <string name="password_length">La contraseña debe tener mínimo 6 caracteres</string>
    <string name="password_error">La contraseña debe contener, como mínimo, letras en minúscula y números</string>

    <!-- PokemonCapturedFragment Snackbar strings -->
    <string name="undo">Deshacer</string>
    <string name="pokemon_removed">"Pokémon eliminado:"</string>

    <!-- Settings Strings -->
    <string name="languages">Idiomas</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="pref_language_summary">Selecciona el idioma de la aplicación</string>
    <string name="language">Idioma</string>
    <string name="settings_app">Ajustes de la App</string>
    <string name="pref_pokemon_generation_summary">Selecciona la generación de Pokémon que aparece en la Pokédex</string>
    <string name="pref_pokemon_generation_title">Generación Pokémon</string>
    <string name="pref_delete_pokemon_summary">Activa o desactiva la eliminación de Pokémon en las pestañas de capturados y pokédex</string>
    <string name="pref_delete_pokemon_title">Eliminación de Pokémon capturados</string>
    <string name="pref_pokemons_order_asc_desc_summary">Selecciona el orden de la lista de Pokémon capturados</string>
    <string name="pref_pokemons_order_asc_desc_title">Ascendente o descendente</string>
    <string name="ascending">Ascendente</string>
    <string name="descending">Descendente</string>
    <string name="pref_pokemons_order_by_summary">Elige el criterio de ordenadicón</string>
    <string name="pref_pokemons_order_by_title">Tipo de orden</string>
    <string name="by_id">Según número en la pokédex</string>
    <string name="by_name">Según nombre</string>
    <string name="by_height">Según altura</string>
    <string name="by_weight">Según peso</string>
    <string name="about_app">Sobre la App</string>
    <string name="pref_about_summary">Información sobre el desarrollador y la versión</string>
    <string name="about">Acerca de…</string>
    <string name="user">Usuario</string>
    <string name="logout_summary">Cierra la sesión del usuario actual</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="captured">Capturado</string>

    <!-- Settings Toast Strings -->
    <string name="language_changed">Idioma cambiado correctamente</string>

    <!-- Settings Alert Dialog Strings -->
    <string name="restart_app">Reiniciar aplicación</string>
    <string name="end_session">Cerrar sesión</string>
    <string name="restart_app_message">Para aplicar el cambio de generación de Pokémon, es necesario reiniciar la aplicación. ¿Deseas continuar?</string>
    <string name="about_message">Aplicación desarrollada por: Gabriel Ortega Molina\nVersión: 1.0.0</string>
    <string name="end_session_message">¿Deseas cerrar sesión?</string>
    <string name="cancel">Cancelar</string>
    <string name="restart">Reiniciar</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="ok">Aceptar</string>

    <!-- Pokedex and CapturedPokemon Strings -->
    <string name="height">Altura:</string>
    <string name="weight">Peso:</string>

    <!-- Various Strings -->
    <string name="image">Imagen</string>

</resources>