<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/languages">

        <ListPreference
            android:defaultValue="es"
            android:entries="@array/language_options"
            android:entryValues="@array/language_values"
            android:key="pref_language"
            android:summary="@string/pref_language_summary"
            android:title="@string/language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_app">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_delete_pokemon"
            android:summary="@string/pref_delete_pokemon_summary"
            android:title="@string/pref_delete_pokemon_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_app">

        <Preference
            android:key="pref_about"
            android:summary="@string/pref_about_summary"
            android:title="@string/about" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/user">

        <Preference
            app:key="logout"
            app:summary="@string/logout_summary"
            app:title="@string/logout_title" />

    </PreferenceCategory>


</PreferenceScreen>