<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="@dimen/login_image_size"
        android:layout_height="@dimen/login_image_size"
        android:src="@mipmap/ic_launcher_round"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/register_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_email_password" />

    <Button
        android:id="@+id/register_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_google" />

</LinearLayout>